[JBPAPP-1548] JBossWS - WSDL access url with resource suffix allows any arbitrary xml file to be viewed
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/branches/jbossws-native-2.0.1.SP2_CP@8977 50344849-fb0f-0410-a53f-a94597aac05c